# CMake

./: README.md
Basic/source/: CMakeLists.txt  example.cxx
Multiple_Files/source/: CMakeLists.txt  example.cxx
Multiple_Files/source/src/: dog.cxx
Multiple_Targets/source/: CMakeLists.txt  example.cxx
Multiple_Targets/source/include/: dog.h
